# envseal

./: .envrc  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  GUARDRAILS.md  ONBOARDING.md  README.md  dist-workspace.toml  recipients
.claude/: settings.json
.claude/skills/envseal/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  prune-releases.yml
agent/: envseal-skill.md  envstow-skill.md
crates/envstow/: Cargo.toml
crates/envstow/src/: agent.rs  cli.rs  error.rs  layout.rs  leakscan.rs  main.rs  secrets.rs  selfupdate.rs  session.rs  store.rs
crates/envstow/tests/: cli.rs
scripts/: redact-guard.sh  sync-secrets.sh  test-redact-guard.sh  unlock.ps1
secrets/: secrets.enc  secrets.example.env
