# Workspace root. The envstow binary crate lives in `bin/`; this manifest exists so tooling
# (cargo-dist / the release pipeline) operates from the repo root, and so future crates can be
# added as workspace members without restructuring.
[workspace]
members = ["bin"]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
