# Workspace root. The envstow crate lives in `crates/envstow/`; this manifest exists so tooling
# (cargo-dist / the release pipeline) operates from the repo root, and so future crates can be
# added as workspace members without restructuring.
[workspace]
members = ["crates/envstow"]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
